[tool.poetry]
name = "pgbackup"
version = "0.1.0"
description = "Database backups locally or to AWS S3."
authors = ["Jacob Mann <gothub@h-mail.us>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2.5"
argparse = "^1.4.0"
boto3 = "^1.20.22"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
pytest-mock = "^3.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
